# structmapper

./: Cargo.toml  README.md
crates/structmapper/: Cargo.toml
crates/structmapper-codegen/: Cargo.toml
crates/structmapper-codegen/src/: derive.rs  lib.rs  placeholder.rs  receiver.rs  value_expr.rs
crates/structmapper-test/: Cargo.toml
crates/structmapper-test/src/: lib.rs
crates/structmapper/src/: lib.rs
