[package]
name = "structmapper-codegen"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations", "proc-macro"] }
syn = { version = "1.0", features = ["parsing", "printing", "extra-traits"] }
quote = "1.0"
proc-macro-error = "1.0"
darling = "0.12"