[package]
name = "structmapper-codegen"
version = "0.4.2"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"
description = "A library to help you generate code that mapped one struct to another."
license = "MIT"
repository = "https://github.com/BSpaceinc/structmapper.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations", "proc-macro"] }
syn = { version = "1.0", features = ["parsing", "printing", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro-error = "1.0"
thiserror = "1.0"