[package]
name = "structmapper"
version = "0.3.1"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"
description = "A library to help you generate code that mapped one struct to another."
license = "MIT"
repository = "https://github.com/BSpaceinc/structmapper.git"
readme = "../../README.md"

[dependencies]
structmapper-codegen = "0.3.1"